--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,6 +54,18 @@ img {
   border-radius: 5px;
 }
 
+figcaption {
+  text-align: center;
+  margin-top: -15px;
+  font-size: medium;
+}
+
+video {
+  border-radius: 5px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 table {
   margin-bottom: 1rem;
   width: 100%;
